--- a/SimpleChatRoom/Properties/launchSettings.json
+++ b/SimpleChatRoom/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "SimpleChatRoom": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
